feat: 실시간 기상 데이터 연동 추가
- WeatherAPI 클래스 구현 (기상청 API 지원)
- 10분 주기 자동 업데이트 기능
- Mock 데이터 시뮬레이션 (API 키 없이도 테스트 가능)
- 실시간 강수량 기반 자동 침수 레벨 계산
- 기온, 습도, 누적 강수량 표시
- 자동 업데이트 ON/OFF 토글 버튼
- 천리안 위성 데이터 활용 준비

--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
             <span class="flood-percentage">72% 침수</span>
         </div>
     </div>
+    <div id="weather-control">
+        <div class="weather-header">
+            <h3>🛰️ 실시간 기상 데이터</h3>
+            <button id="toggleAutoUpdate" class="auto-btn active">자동 업데이트 ON</button>
+        </div>
+        <div class="weather-data">
+            <div class="weather-item">
+                <span class="label">현재 강수량:</span>
+                <span id="currentRainfall" class="value">-- mm/h</span>
+            </div>
+            <div class="weather-item">
+                <span class="label">누적 강수량:</span>
+                <span id="totalRainfall" class="value">-- mm</span>
+            </div>
+            <div class="weather-item">
+                <span class="label">기온:</span>
+                <span id="temperature" class="value">-- °C</span>
+            </div>
+            <div class="weather-item">
+                <span class="label">습도:</span>
+                <span id="humidity" class="value">-- %</span>
+            </div>
+            <div class="weather-item full-width">
+                <span class="label">데이터 출처:</span>
+                <span id="dataSource" class="value">기상청 (업데이트 대기중...)</span>
+            </div>
+        </div>
+    </div>
     <div id="loading">모델 로딩 중...</div>
     <script type="module" src="main.js"></script>
 </body>
