feat: 천리안 위성 영상 실시간 수신 애니메이션 추가
- 수신 중 다이나믹 애니메이션 (회전 아이콘, 펄스 효과)
- 신호 세기 바 애니메이션 (4단계 파동 효과)
- 실시간 상태 표시 (대기중/수신중/완료/실패)
- 1초 수신 시뮬레이션 및 2초 완료 메시지 표시

--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
             <div class="satellite-info">
                 <span class="label">업데이트 주기: 10분</span>
             </div>
+            <div id="satelliteStatus" class="satellite-status">
+                <span class="status-icon">📡</span>
+                <span class="status-text">대기 중...</span>
+                <div class="signal-bars">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="timelapse-control">
