feat: AI 모델 재학습 과정 다이나믹 애니메이션 추가
- 학습 상태 실시간 표시 (대기중/학습중/완료)
- 진행률 바 애니메이션 (그라디언트 shimmer 효과)
- 뇌 아이콘 펄스 애니메이션 (학습 중 회전 + 밝기 변화)
- Epoch별 Loss 값 실시간 업데이트
- 데이터 카운트 및 모델 상태 메시지 표시
- 완료 시 축하 애니메이션 (스케일 + 글로우)

--- a/index.html
+++ b/index.html
@@ -126,6 +126,22 @@
             <p>신뢰도: <span id="predictionConfidence">--%</span></p>
             <p>경향: <span id="predictionTrend">--</span></p>
         </div>
+        <div id="aiTrainingStatus" class="ai-training-status">
+            <div class="status-header">
+                <span class="status-icon">🧠</span>
+                <span class="status-text">대기 중</span>
+            </div>
+            <div class="progress-container">
+                <div class="progress-bar">
+                    <div class="progress-fill"></div>
+                </div>
+                <span class="progress-text">0%</span>
+            </div>
+            <div class="training-info">
+                <span class="data-count">데이터: 0개</span>
+                <span class="model-status">모델 준비중</span>
+            </div>
+        </div>
     </div>
     <div id="loading">모델 로딩 중...</div>
     <script type="module" src="main.js"></script>
