feat: 구름 색상 경보 시스템 추가
- 와이어프레임 마커 제거
- 강수량에 따라 구름 색상 변화 (녹/노/주/빨)
- 부드러운 색상 전환 애니메이션 (lerp)
- 하단 중앙 강수량 경보 카드 추가
- 단계별 색상 및 메시지 표시
- CRITICAL 단계 펄스 애니메이션

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
             </div>
         </div>
     </div>
+    <div id="rainfall-alert-card">
+        <span class="alert-icon">🌧️</span>
+        <span class="alert-level">SAFE</span>
+        <span class="alert-value">0.0 mm/h</span>
+        <span class="alert-message">안전</span>
+    </div>
     <div id="loading">모델 로딩 중...</div>
     <script type="module" src="main.js"></script>
 </body>
